--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -2,6 +2,17 @@
 
 {% block body %}
     <h1>Hello {{ name }}</h1>
+
+    {% if not some_value %}
+        {{ 'YES!' }}<br>
+    {% endif %}
+
+    {% for key, some_item in some_array %}
+        {{ some_item }} => {{ key }}<br>
+    {% endfor %}
+
 {% endblock %}
 
 {% block stylesheets %}{% endblock %}
+
+{#{% block title %}Home Page{% endblock %}#}
