--- a/src/AppBundle/Resources/views/product/show.html.twig
+++ b/src/AppBundle/Resources/views/product/show.html.twig
@@ -1,9 +1,10 @@
 {% extends '@App/layout.html.twig' %}
 
-{% block title %}Feedback{% endblock %}
-
 {% block body %}
-    <h1>Feedback</h1>
+    <h1>Product {{ id }}</h1>
+
 {% endblock %}
 
 {% block stylesheets %}{% endblock %}
+
+{% block title %}Products page{% endblock %}
