--- a/src/AppBundle/Resources/views/default/index.html.twig
+++ b/src/AppBundle/Resources/views/default/index.html.twig
@@ -1,9 +1,12 @@
 {% extends '@App/layout.html.twig' %}
 
+{% block title %}Home Page{% endblock %}
+
 {% block body %}
-    <h1>Hello {{ name }}</h1>
+    <div class="starter-template">
+        <h1>Bootstrap starter template</h1>
+        <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
+    </div>
 {% endblock %}
 
 {% block stylesheets %}{% endblock %}
-
-{#{% block title %}Home Page{% endblock %}#}
