BD getRepository getDoctrine

--- a/src/AppBundle/Resources/views/product/show.html.twig
+++ b/src/AppBundle/Resources/views/product/show.html.twig
@@ -1,10 +1,13 @@
 {% extends '@App/layout.html.twig' %}
 
 {% block body %}
-    <h1>Product {{ id }}</h1>
-
+    <h1>{{ product.title }}</h1>
+    <hr>
+    Title: {{ product.title }} <br>
+    Price: {{ product.price }}  <br>
+    Description: {{ product.description }} <br>
 {% endblock %}
 
 {% block stylesheets %}{% endblock %}
 
-{% block title %}Products page{% endblock %}
+{% block title %}Product {{ product.id }}{% endblock %}
