--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -31,6 +31,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="{{ path('product_list') }}">Products</a>
             </li>
+             <li class="nav-item">
+                <a class="nav-link" href="{{ path('category_list') }}">Category</a>
+            </li>
             <li class="nav-item">
                 <a class="nav-link" href="{{ path('feedback') }}">Feedback</a>
             </li>
