--- a/src/AppBundle/Resources/views/product/show.html.twig
+++ b/src/AppBundle/Resources/views/product/show.html.twig
@@ -5,6 +5,7 @@
     <hr>
     Title: {{ product.title }} <br>
     Price: {{ product.price }}  <br>
+    Category: {{ product.category.name }}<br>
     Description: {{ product.description }} <br>
 {% endblock %}
 
