Feedback save and flash message

--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -57,6 +57,10 @@
 </nav>
 
 <main role="main" class="container">
+    {% for flash in app.session.flashbag.get('success') %}
+        <div class="alert alert-success">{{ flash }}</div>
+    {% endfor %}
+
     {% block body %}{% endblock %}
 </main>
 
