--- a/src/AppBundle/Resources/views/default/feedback.html.twig
+++ b/src/AppBundle/Resources/views/default/feedback.html.twig
@@ -4,7 +4,11 @@
 
 {% block body %}
     <h1>Feedback</h1>
-    {{ form(feedback_form) }}
+    {{ form_start(feedback_form) }}
+        {{ form_row(feedback_form.name) }}
+        {{ form_row(feedback_form.email) }}
+        {{ form_row(feedback_form.message) }}
+    {{ form_end(feedback_form) }}
 {% endblock %}
 
 {% block stylesheets %}{% endblock %}
